--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "core-js": "^3.6.5",
+    "element-plus": "^2.1.4",
     "firebase": "^9.6.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.14"
