--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
+    "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
     "element-plus": "^2.1.4",
     "firebase": "^9.6.8",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.0.0",
+    "vue-chartjs": "^4.0.4",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint": "^8.12.0",
+    "eslint-plugin-vue": "^7.20.0"
   },
   "eslintConfig": {
     "root": true,
